# harmony-trainer

./: CMakeLists.txt  README.md
scripts/: run-xcode.sh
src/: AvailableAnalytics.h  HarmonyTrainerComponent.cpp  HarmonyTrainerComponent.h  Main.cpp  PracticeAnalytic.h
